# UCB-Algoritmo-e-Programacao-Estruturada

capitulos10+/aquecimento/aluno/: main.c
capitulos10+/aquecimento/gps/: main.c
capitulos10+/aquecimento/lista/: main.c
capitulos10+/aquecimento/lista-de-notas/: a-lista-de-notas.c
capitulos10+/aquecimento/percorrer/: main.c
capitulos10+/aquecimento/potencia/: main.c
capitulos10+/memoria/: CMakeLists.txt
